rust/macros/tests/invalid/target/debug/deps/leading_comma_rs-27fab2d03f952dc9.d
/Users/dalton.maahs/dev/exercism/rust/macros/tests/invalid/target/debug/deps/leading_comma_rs-27fab2d03f952dc9.rmeta: leading-comma.rs

/Users/dalton.maahs/dev/exercism/rust/macros/tests/invalid/target/debug/deps/leading_comma_rs-27fab2d03f952dc9.d: leading-comma.rs

leading-comma.rs:
